--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name" >
@@ -17,5 +17,7 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-sdk android:minSdkVersion="17" android:targetSdkVersion="22">
+    </uses-sdk>
 
 </manifest>
