该分支为实现Http请求： 1、JSONParser实现json数据解析 2、Section为根板块的抽象模型 3、HTTPClient实现http请求连接 4、BYRURL Interface 定义API接口URL
AndroidManifest.xml增加Internet权限

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'byrclient_debug_key'
+            keyPassword 'byrclient_android'
+            storeFile file('C:/Users/Administrator/.android/debug.keystore')
+            storePassword 'byrclient_android'
+        }
+    }
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
-
     defaultConfig {
         applicationId "cn.edu.bupt.byrclient"
         minSdkVersion 15
@@ -16,10 +23,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            signingConfig signingConfigs.config
+        }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
 }
